[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weekly-product-digest-mcp"
version = "1.0.0"
description = "MCP server that aggregates weekly startup/product/indie news into a report"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["mcp", "digest", "news", "startup", "product-hunt", "hacker-news", "rss"]
authors = [{ name = "weekly-product-digest-mcp contributors" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "pydantic>=2.6.0",
    "anthropic>=0.116.0",
]

[project.urls]
Homepage = "https://github.com/salwks/CreateTrend"
Repository = "https://github.com/salwks/CreateTrend"

[project.scripts]
weekly-product-digest-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
